--- a/src/main/resources/templates/error/401.html
+++ b/src/main/resources/templates/error/401.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorate="~{front/layout/main}">
-    <main layout:fragment="content">
-        <th:block th:replace="~{error/_common::common}">
+      layout:decorate="~{front/layouts/main}">
 
-        </th:block>
+<th:block layout:fragment="addCss">
+    <link rel="stylesheet" type="text/css" th:href="@{/front/css/error/style.css}">
+</th:block>
 
-
-    </main>
-
-
-
+<main layout:fragment="content">
+    <th:block th:replace="~{error/_common::common}"></th:block>
+</main>
 </html>
