로그인 처리

--- a/src/main/resources/templates/front/outlines/_header.html
+++ b/src/main/resources/templates/front/outlines/_header.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+    xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
     <header th:fragment="common">
         <div class="left">
             <a th:href="@{/}" class="logo">
@@ -26,7 +27,7 @@
                     <a href="#">
                         <div>
                             <i class="icon card-game"></i>
-                            <th:block th:text="#{카드_게임}"></th:block>
+                            <th:block th:text="#{카드 게임}"></th:block>
                         </div>
                     </a>
                 </li>
@@ -53,13 +54,18 @@
                 <li>
                     <a href="#">
                         <i class="icon catalog"></i>
-                        <th:block th:text="#{포켓몬_도감}"></th:block>
+                        <th:block th:text="#{포켓몬 도감}"></th:block>
                     </a>
                 </li>
                 <li>
-                    <a th:href="@{/member/login}">
+                    <a th:unless="${@memberUtil.isLogin()}" th:href="@{/member/login}">
                         <i class="icon login"></i>
                         <th:block th:text="#{로그인}"></th:block>
+                    </a>
+
+                    <a th:if="${@memberUtil.isLogin()}" th:href="@{/mypage}">
+                        <i class="icon login"></i>
+                        <th:block th:text="#{MYPAGE}"></th:block>
                     </a>
                 </li>
                 <li>
