--- a/src/main/resources/templates/admin/layouts/main.html
+++ b/src/main/resources/templates/admin/layouts/main.html
@@ -5,8 +5,8 @@
         <meta charset="UTF-8">
         <meta name="keywords" th:if="${keywords != null}" th:content="${keywords}">
         <meta name="description" th:if="${description != null}" th:content="${description}">
-        <meta name="_csrf" th:content="${_csrf.token">
-        <meate naem = "_csrf_header" th:content="${_csrf.headerName)}">
+        <meta name="_csrf" th:content="${_csrf.token}">
+        <meta name="_csrf_header" th:content="${_csrf.headerName}">
 
         <title th:if="${pageTitle != null}" th:text="${pageTitle}"></title>
 
