--- a/src/main/resources/templates/admin/layouts/main.html
+++ b/src/main/resources/templates/admin/layouts/main.html
@@ -9,8 +9,10 @@
         <meta name="_csrf_header" th:content="${_csrf.headerName}">
         <meta name="rootUrl" th:content="@{/}">
 
+
         <title th:if="${pageTitle != null}" th:text="${pageTitle}"></title>
 
+        <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/xeicon@2.3.3/xeicon.min.css">
         <link rel="stylesheet" type="text/css" th:href="@{/common/css/style.css}">
 
         <th:block th:if="${addCommonCss != null}">
