--- a/src/main/resources/templates/mobile/layouts/main.html
+++ b/src/main/resources/templates/mobile/layouts/main.html
@@ -13,6 +13,7 @@
         <title th:if="${pageTitle != null}" th:text="${pageTitle}"></title>
 
         <link rel="stylesheet" type="text/css" th:href="@{/common/css/style.css}">
+        <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/xeicon@2.3.3/xeicon.min.css">
 
         <th:block th:if="${addCommonCss != null}">
             <link rel="stylesheet" type="text/css"
