--- a/src/main/resources/templates/front/pokemon/list.html
+++ b/src/main/resources/templates/front/pokemon/list.html
@@ -4,6 +4,10 @@
       layout:decorate="~{front/layouts/main}">
 <main layout:fragment="content">
 
+    <th:block th:replace="~{front/pokemon/_search::search}"></th:block>
+
+    <ht:block th:replace="~{front/pokemon/_items::items}"></ht:block>
+
     <th:block th:replace="~{common/_pagination::pagination}"></th:block>
 </main>
 </html>
