--- a/src/main/resources/templates/email/auth.html
+++ b/src/main/resources/templates/email/auth.html
@@ -2,8 +2,12 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <body>
     <h1 th:text="${subject}"></h1>
+    <div>[[${to}]]</div>
+    <div>[[${cc}]]</div>
+    <div>[[${bcc}]]</div>
+    <div>[[${subject}]]</div>
+    <div th:utext="${content}"></div>
+    <div>[[${key1}]]</div>
+    <div>[[${key2}]]</div>
 </body>
-
-
-
 </html>
