--- a/src/main/resources/templates/front/member/join.html
+++ b/src/main/resources/templates/front/member/join.html
@@ -9,6 +9,16 @@
             <input type="text" name="email" th:field="*{email}" th:placeholder="#{이메일_주소를_입력해주세요.}">
             <div class="error" th:each="err : ${#fields.errors('email')}" th:text="${err}"></div>
         </div>
+        <div class="row auth-box">
+            <div>
+                <input type="number" id="authCode">
+                <span class="timer">03:00</span>
+                <button type="button" id="send-auth-code" th:text="#{인증코드 전송}" disabled></button>
+                <button type="button" id="resend-auth-code" class="dn" th:text="#{인증코드 재전송}"></button>
+            </div>
+            <div class="error dn"></div>
+        </div>
+
         <div class="row">
             <input type="text" name="name" th:field="*{name}" th:placeholder="#{회원명을_입력하세요.}">
             <div class="error" th:each="err : ${#fields.errors('name')}" th:text="${err}"></div>
