--- a/src/main/resources/static/front/css/style.css
+++ b/src/main/resources/static/front/css/style.css
@@ -190,37 +190,28 @@ header .move-to-store::after {
 }
 /* 사이트 상단 헤더 E */
 
-
-
 /* 페이지네이션 S */
 .pagination {
     text-align: center;
-
     margin: 20px 0;
 }
 
-.pagination > a {
+.pagination a {
     display: inline-block;
     min-width: 45px;
-
     height: 45px;
-
     border: 1px solid #000;
-    border-radius: 3px;
-
     line-height: 43px;
-
     font-size: 1.56rem;
+    border-radius: 3px;
 }
 
-.pagination > a+a {
-    margin-lef:3px;
-
+.pagination a + a {
+    margin-left: 3px;
 }
 
-.a.on {
+.pagination a.on {
     background: #000;
     color: #fff;
 }
-
 /* 페이지네이션 E */
