포켓몬 도감

--- a/src/main/resources/templates/front/pokemon/_navigator.html
+++ b/src/main/resources/templates/front/pokemon/_navigator.html
@@ -3,12 +3,13 @@
 <th:block th:fragment="navigator">
     <nav th:object="${item}">
         <a th:href="@{/pokemon/view/{seq}(seq=*{prevItem.seq})}" class="prev-link">
-            <span th:text="*{#strings.concat('No.', #numbers.formatInteger(prevItem.seq, 4))}"></span>
-            <span th:text="*{prevItem.name}" class="item-nm"> </span>
+            <span th:text="*{#strings.concat('No.', #numbers.formatInteger(prevItem.seq, 4))}" class="item-no"></span>
+            <span th:text="*{prevItem.name}" class="item-nm"></span>
         </a>
+
         <a th:href="@{/pokemon/view/{seq}(seq=*{nextItem.seq})}" class="next-link">
-            <span th:text="*{#strings.concat('No.', #numbers.formatInteger(nextItem.seq, 4))}"></span>
-            <span th:text="*{nextItem.name}" class="item-nm"> </span>
+            <span th:text="*{#strings.concat('No.', #numbers.formatInteger(nextItem.seq, 4))}" class="item-no"></span>
+            <span th:text="*{nextItem.name}" class="item-nm"></span>
         </a>
     </nav>
 </th:block>
