--- a/src/main/resources/templates/front/pokemon/list.html
+++ b/src/main/resources/templates/front/pokemon/list.html
@@ -6,7 +6,7 @@
 
     <th:block th:replace="~{front/pokemon/_search::search}"></th:block>
 
-    <ht:block th:replace="~{front/pokemon/_items::items}"></ht:block>
+    <th:block th:replace="~{front/pokemon/_items::items}"></th:block>
 
     <th:block th:replace="~{common/_pagination::pagination}"></th:block>
 </main>
