--- a/src/main/resources/templates/front/pokemon/_items.html
+++ b/src/main/resources/templates/front/pokemon/_items.html
@@ -7,6 +7,7 @@
                 <div th:text="#{다른_키워드로_검색해주세요.}"></div>
             </li>
             <li th:unless="${#lists.isEmpty(items)}" class="item" th:each="item : ${items}" th:object="${item}">
+                <th:block th:uext="${@wishService.showWish(item.seq, 'POKEMON', myPokemons)}"></th:block>
                 <a th:href="@{/pokemon/view/{seq}(seq=*{seq})}">
                     <th:block th:utext="*{@utils.showImage(frontImage, 390, 390, 'image')}"></th:block>
                     <div class="item-no"
