관리자 페이지

--- a/src/main/resources/templates/admin/basic/siteConfig.html
+++ b/src/main/resources/templates/admin/basic/siteConfig.html
@@ -3,6 +3,6 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{admin/layouts/main}">
 <div layout:fragment="content">
-    <h1>메인 영역...</h1>
+    <h1>사이트 기본정보 설정</h1>
 </div>
 </html>
