--- a/src/main/resources/templates/mobile/mypage/wishlist.html
+++ b/src/main/resources/templates/mobile/mypage/wishlist.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorate="~{admin/layouts/main}">
-<div layout:fragment="content">
-    <h1>메인 영역...</h1>
-</div>
+      layout:decorate="~{front/layouts/main}">
+<main layout:fragment="content">
+    <h1 th:text="#{NCT_WISH}"></h1>
+</main>
 </html>
