--- a/src/main/resources/templates/admin/basic/siteConfig.html
+++ b/src/main/resources/templates/admin/basic/siteConfig.html
@@ -4,5 +4,63 @@
       layout:decorate="~{admin/layouts/main}">
 <div layout:fragment="content">
     <h1>사이트 기본정보 설정</h1>
+    <form name="frmConfig" method="POST" autocomplete="off">
+        <h2>기본 정보</h2>
+        <table class="table-cols mb30">
+            <tr>
+                <th width="200">사이트명</th>
+                <td>
+                    <input type="text" name="siteTitle">
+                </td>
+            </tr>
+            <tr>
+                <th>사이트 설명</th>
+                <td>
+                    <input type="text" name="description">
+                </td>
+            </tr>
+            <tr>
+                <th>검색 키워드</th>
+                <td>
+                    <input type="text" name="keyword">
+                </td>
+            </tr>
+        </table>
+
+        <h2>CSS, JS 버전</h2>
+        <table class="table-cols mb30">
+            <tr>
+                <th width="200">CSS 버전</th>
+                <td>
+                    <input type="number" name="cssVersion">
+                </td>
+            </tr>
+            <tr>
+                <th>JS 버전</th>
+                <td>
+                    <input type="number" name="jsVersion">
+                </td>
+            </tr>
+        </table>
+
+        <h2>회원 가입설정</h2>
+        <table class="table-cols mb30">
+            <tr>
+                <th width="200">이메일 인증</th>
+                <td>
+                    <input type="radio" name="useEmailAuth" value="true" id="use-email-auth-true">
+                    <label for="use-email-auth-true">사용</label>
+
+                    <input type="radio" name="useEmailAuth" value="false" id="use-email-auth-false">
+                    <label for="use-email-auth-false">미사용</label>
+                </td>
+            </tr>
+        </table>
+
+        <div class="button-group">
+            <button type="reset" class="btn">다시입력</button>
+            <button type="submit" class="btn black">저장하기</button>
+        </div>
+    </form>
 </div>
 </html>
