--- a/src/main/resources/static/admin/css/style.css
+++ b/src/main/resources/static/admin/css/style.css
@@ -107,6 +107,20 @@ textarea {
 .button-group .btn + .btn {
     margin-left: 5px;
 }
+
+.submit-btn {
+    background: #000;
+    color: #fff;
+    min-width: 250px;
+    height: 45px;
+    border: 0;
+    border-radius: 3px;
+    display: block;
+    margin: 20px auto;
+    cursor: pointer;
+    font-size: 1.25rem;
+}
+
 /* 버튼 공통 E */
 
 /* 라디오 버튼 공통 S */
@@ -230,3 +244,30 @@ h2 {
     font-size: 1.25rem;
 }
 /* 제목 E */
+
+/* 세션 메세지 S*/
+
+.message-dialog {
+    position: fixed;
+    z-index: 10;
+    background: #fff;
+    box-shadow: 2px 2px 10px #8789f7;
+    color: #8789f7;
+
+    left: 255px;
+    bottom: 100px;
+    width: calc(100% - 300px);
+    padding: 25px;
+    text-align: center;
+    font-size: 1.25rem;
+    transition: all 1s;
+    border-radius: 10px;
+}
+
+.message-dialog.fade {
+    opacity: 0;
+
+}
+
+
+/* 세션 메세지 E*/
