--- a/src/main/resources/static/admin/css/style.css
+++ b/src/main/resources/static/admin/css/style.css
@@ -60,6 +60,35 @@ textarea {
 .table-cols tr:first-of-type td {
     border-top: 1px solid #ccc;
 }
+
+.table-rows {
+    border-spacing: 0;
+    width: 100%;
+}
+
+.table-rows thead th {
+    background: #212121;
+    color: #fff;
+    padding: 7px 10px;
+    font-size: 1.15rem;
+}
+.table-rows thead th + th {
+    border-left: 1px solid #f8f8f8;
+}
+.table-rows tbody td {
+    border-bottom: 1px solid #ccc;
+    padding: 5px 10px;
+}
+
+.table-rows tbody tr:nth-of-type(2n) td {
+    background: #f8f8f8;
+}
+
+.table-action {
+    padding: 20px 10px;
+    border-bottom: 1px solid #212121;
+    font-size: 1.15rem;
+}
 /* 테이블 공통 E */
 
 /* 여백 공통 S */
@@ -121,6 +150,24 @@ textarea {
     font-size: 1.25rem;
 }
 
+.sbtn {
+    display: inline-block;
+    height: 40px;
+    border: 1px solid #000;
+    color: #000;
+    font-size: 1rem;
+    line-height: 38px;
+    padding: 0 15px;
+    min-width: 80px;
+    border-radius: 3px;
+    background: #fff;
+    cursor: pointer;
+}
+
+.sbtn.black {
+    background: #000;
+    color: #fff;
+}
 /* 버튼 공통 E */
 
 /* 라디오 버튼 공통 S */
@@ -160,6 +207,12 @@ input[type='checkbox'] + label {
 
 input[type='checkbox']:checked + label {
     background:url("../images/check_on.png") no-repeat left center;
+}
+
+input[type='checkbox'] + label.standalone {
+    padding: 0;
+    width: 23px;
+    height: 23px;
 }
 /* 체크박스 공통 E */
 
@@ -245,15 +298,13 @@ h2 {
 }
 /* 제목 E */
 
-/* 세션 메세지 S*/
-
+/* 세션 메세지 S */
 .message-dialog {
     position: fixed;
     z-index: 10;
-    background: #fff;
+    background:#fff;
     box-shadow: 2px 2px 10px #8789f7;
     color: #8789f7;
-
     left: 255px;
     bottom: 100px;
     width: calc(100% - 300px);
@@ -263,11 +314,7 @@ h2 {
     transition: all 1s;
     border-radius: 10px;
 }
-
 .message-dialog.fade {
     opacity: 0;
-
 }
-
-
-/* 세션 메세지 E*/
+/* 세션 메세지 E */
