--- a/src/main/resources/templates/admin/basic/terms.html
+++ b/src/main/resources/templates/admin/basic/terms.html
@@ -4,35 +4,29 @@
       layout:decorate="~{admin/layouts/main}">
 <div layout:fragment="content">
     <h1>약관 등록</h1>
-    <form name="frmTerms" method="POST" th:action="@{/admin/basic/terms}" autocomplete="off"
-          th:object="${terms}">
-        <div class="error global" th:each="err : ${#fields.globalErrors()}"
-            th:text="${err}"></div>
+
+    <form name="frmTerms" method="POST" th:action="@{/admin/basic/terms}" autocomplete="off" th:object="${terms}" target="ifrmProcess">
+        <div class="error global" th:each="err : ${#fields.globalErrors()}" th:text="${err}"></div>
         <table class="table-cols">
             <tr>
-                <th width="150">약관 코드</th>
+                <th width="150">약관코드</th>
                 <td>
                     <input type="text" name="code" th:field="*{code}">
-                    <div class="error" th:each="err : ${#fields.errors('code')}"
-                        th:text="${err}">
-                    </div>
+                    <div class="error" th:each="err : ${#fields.errors('code')}" th:text="${err}"></div>
                 </td>
             </tr>
             <tr>
                 <th>약관제목</th>
                 <td>
                     <input type="text" name="subject" th:field="*{subject}">
-                    <div class="error" th:each="err : ${#fields.errors('subject')}"
-                        th:tex="${err}">
-                    </div>
+                    <div class="error" th:each="err : ${#fields.errors('subject')}" th:text="${err}"></div>
                 </td>
             </tr>
             <tr>
-                <th>약관 내용</th>
+                <th>약관내용</th>
                 <td>
                     <textarea name="content" th:field="*{content}"></textarea>
-                    <div class="error" th:each="err : ${#fields.errors('content')}"
-                         th:text="${err}"></div>
+                    <div class="error" th:each="err : ${#fields.errors('content')}" th:text="${err}"></div>
                 </td>
             </tr>
         </table>
@@ -40,5 +34,53 @@
     </form>
 
     <h2>약관 목록</h2>
+    <form name="frmList" th:action="@{/admin/basic/terms}" target="ifrmProcess" autocomplete="off">
+        <input type="hidden" name="_method" value="PATCH">
+        <table class="table-rows">
+            <thead>
+                <tr>
+                    <th width="40">
+                        <input type="checkbox" class="check-all" data-target-class="chk" id="checkall">
+                        <label for="checkall" class="standalone"></label>
+                    </th>
+                    <th width="220">약관코드</th>
+                    <th>약관제목/내용</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr th:if="${items != null && !#lists.isEmpty(items)}"
+                    th:each="item, status : ${items}" th:object="${item}">
+                    <td>
+                        <input type="hidden" th:name="${'code_' + status.index}" th:value="*{code}">
+                        <input type="checkbox" name="chk" th:value="${status.index}" th:id="${'chk-' + status.index}" class="chk">
+                        <label th:for="${'chk-' + status.index}" class="standalone"></label>
+                    </td>
+                    <td th:text="*{code}"></td>
+                    <td>
+                        <dl>
+                            <dt>제목</dt>
+                            <dd>
+                                <input type="text" th:name="${'subject_' + status.index}" th:value="*{subject}">
+                            </dd>
+                        </dl>
+                        <dl>
+                            <dt>내용</dt>
+                            <dd>
+                                <textarea th:name="${'content_' + status.index}" th:text="*{content}"></textarea>
+                            </dd>
+                        </dl>
+                    </td>
+                </tr>
+                <tr th:unless="${items != null && !#lists.isEmpty(items)}">
+                    <td colspan="3" class="no-data">등록된 약관이 없습니다.</td>
+                </tr>
+            </tbody>
+        </table>
+        <div class="table-action" data-form-name="frmList">
+            선택 약관을
+            <button type="button" class="sbtn delete">삭제하기</button>
+            <button type="button" class="sbtn black modify">수정하기</button>
+        </div>
+    </form>
 </div>
 </html>
