--- a/src/main/resources/templates/mobile/mypage/wishlist.html
+++ b/src/main/resources/templates/mobile/mypage/wishlist.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorate="~{front/layouts/main}">
+      layout:decorate="~{mobile/layouts/main}">
 <main layout:fragment="content">
-    <h1 th:text="#{NCT_WISH}"></h1>
+    <h1 th:text="#{나의_WISH}"></h1>
 </main>
 </html>
