--- a/src/main/resources/static/common/css/style.css
+++ b/src/main/resources/static/common/css/style.css
@@ -9,3 +9,44 @@
 .flex.ac {
     align-items: center;
 }
+
+/* 레이어 팝업 S */
+.layer-dim {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    z-index: 100;
+    background:rgba(0, 0, 0, 0.7);
+    left: 0;
+    top: 0;
+}
+
+.layer-popup {
+    position: fixed;
+    z-index: 101;
+    background: #fff;
+    padding: 40px;
+    border-radius: 20px;
+}
+.layer-content {
+    border: 1px solid #ccc;
+}
+
+.layer-close {
+    position: absolute;
+    top: -20px;
+    right: -20px;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    background: #fff;
+    border: 3px solid #000;
+    text-align: center;
+    line-height: 24px;
+}
+.layer-close i {
+    font-size: 1.5rem;
+    padding: 0;
+    margin: 0;
+}
+/* 레이어 팝업 E */
