--- a/src/main/resources/templates/admin/board/list.html
+++ b/src/main/resources/templates/admin/board/list.html
@@ -9,7 +9,7 @@
             <tr>
                 <th width="180">키워드</th>
                 <td class="flex ac">
-                    <select name="sopt" th:field="*{sopt}">
+                    <select name="sopt" th:field="*{sopt}" class="w180 mr5">
                         <option value="ALL">통합검색</option>
                         <option value="BID">게시판 아이디</option>
                         <option value="NAME">게시판 이름</option>
@@ -19,6 +19,65 @@
             </tr>
         </table>
         <button type="submit" class="submit-btn">검색하기</button>
+    </form>
+
+    <form name="frmList" method="POST" th:action="@{/admin/board/list}" target="ifrmProcess" autocomplete="off">
+        <input type="hidden" name="_method" value="PATCH">
+        <table class="table-rows">
+            <thead>
+                <tr>
+                    <th width="40">
+                        <span class="checkbox">
+                            <input type="checkbox" class="check-all" id="checkall" data-target-class="chk">
+                            <label for="checkall" class="standalone"></label>
+                        </span>
+                    </th>
+                    <th width="180">게시판 아이디</th>
+                    <th width="200">게시판 이름</th>
+                    <th width="180">사용여부</th>
+                    <th width="180">스킨</th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr th:if="${items == null || items.isEmpty()}">
+                    <td colspan="6" class="no-data">조회된 게시판이 없습니다.</td>
+                </tr>
+                <tr th:unless="${items == null || items.isEmpty()}"
+                    th:each="item, status : ${items}" th:object="${item}">
+                    <td>
+                        <input type="checkbox" name="chk" th:value="${status.index}" th:id="${'chk-' + status.index}" class="chk">
+                        <label th:for="${'chk-' + status.index}" class="standalone"></label>
+                        <input type="hidden" th:name="${'bid_' + status.index}" th:value="*{bid}">
+                    </td>
+                    <td th:text="*{bid}"></td>
+                    <td>
+                        <input type="text" th:name="${'name_' + status.index}" th:value="*{name}">
+                    </td>
+                    <td>
+                        <select th:name="${'open_' + status.index}">
+                            <option value="true" th:selected="*{open}">사용</option>
+                            <option value="false" th:selected="*{!open}">미사용</option>
+                        </select>
+                    </td>
+                    <td>
+                        <select th:name="${'skin_' + status.index}">
+                            <option value="default" th:selected="*{skin == 'default'}">기본(default)</option>
+                            <option value="gallery" th:selected="*{skin == 'gallery'}">갤러리(gallery)</option>
+                        </select>
+                    </td>
+                    <td>
+                        <a th:href="@{/admin/board/edit/{bid}(bid=*{bid})}" class="sbtn">게시판설정</a>
+                        <a th:href="@{/board/list/{bid}(bid=*{bid})}" class="sbtn black" target="_blank">미리보기</a>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+        <div class="table-action" data-form-name="frmList">
+            선택한 게시판을
+            <button type="button" class="sbtn delete">삭제하기</button>
+            <button type="button" class="sbtn black edit">수정하기</button>
+        </div>
     </form>
 
     <th:block th:replace="~{common/_pagination::pagination}"></th:block>
