--- a/src/main/resources/templates/front/board/default/list.html
+++ b/src/main/resources/templates/front/board/default/list.html
@@ -1,6 +1,24 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <th:block th:fragment="skin" th:object="${board}">
+    <div th:replace="~{front/board/default/_title::title}"></div>
 
+    <form id="frmSearch" name="frmSearch" method="GET" th:action="@{/board/list/{bid}(bid=*{bid})}" autocomplete="off" th:object="${boardSearch}">
+        <input type="hidden" name="sort" value="*{sort}">
+        <input type="hidden" name="category" th:field="*{category}">
+        <select name="sopt" th:field="*{sopt}">
+            <option value="ALL" th:text="#{통합검색}"></option>
+            <option value="SUBJEXT" th:text="#{제목}"></option>
+            <option value="CONTENT" th:text="#{내용}"></option>
+            <option value="SUBJECT_CONTENT" th:text="#{제목 + 내용}"></option>
+            <option value="POSTER" th:text="#{작성자}">
+        </select>
+        <input type="text" name="skey" th:field="*{skey}" th:placeholder>
+    </form>
+
+    <nav th:replace="~{front/board/default/_category::category}"></nav>
+
+    <th:block th:replace="~{front/board/default/_items::items}"></th:block>
+    <th:block th:replace="~{common/_pagination::pagination}"></th:block>
 </th:block>
 </html>
