--- a/src/main/resources/templates/front/member/join.html
+++ b/src/main/resources/templates/front/member/join.html
@@ -4,7 +4,17 @@
       layout:decorate="~{front/layouts/main}">
 <main layout:fragment="content">
     <h1 th:text="#{회원가입}"></h1>
+
+    <th:block th:if="${socialConfig.useKakaoLogin && requestJoin.social}">
+        <div class="social-channel">
+            <img th:src="@{/front/images/kakaotalk.png}">
+            <th:block th:text="#{카카오_로그인_회원가입}"></th:block>
+        </div>
+    </th:block>
     <form name="frmJoin" method="POST" th:action="@{/member/join_ps}" autocomplete="off" th:object="${requestJoin}">
+        <input th:if="*{socialChannel != null && socialChannel.name != 'NONE' }" type="hidden" name="socialChannel" th:field="*{socialChannel}">
+        <input th:if="*{socialToken != null && socialToken != ''}" type="hidden" name="socialToken" th:field="*{socialToken}">
+
         <div class="row">
             <input type="text" name="email" th:field="*{email}" th:placeholder="#{이메일_주소를_입력해주세요.}" th:readonly="${authCodeVerified}">
             <div class="error" th:each="err : ${#fields.errors('email')}" th:text="${err}"></div>
@@ -15,7 +25,6 @@
                 <span class="timer">03:00</span>
                 <button type="button" id="verify-auth-code" class="dn" th:text="#{인증하기}"></button>
                 <button type="button" id="send-auth-code" th:text="#{인증코드_전송}" th:data-text="#{인증코드_재전송}" th:disabled="*{#strings.isEmpty(email)}"></button>
-
             </div>
             <div class="message" th:classappend="${!authCodeVerified} ? 'dn'">
                 <th:block th:if="${authCodeVerified}" th:text="#{인증되었습니다.}"></th:block>
@@ -25,17 +34,19 @@
             <input type="text" name="name" th:field="*{name}" th:placeholder="#{회원명을_입력하세요.}">
             <div class="error" th:each="err : ${#fields.errors('name')}" th:text="${err}"></div>
         </div>
-        <div class="row">
-            <input type="password" name="password" th:field="*{password}" th:placeholder="#{비밀번호}">
 
-            <div class="error" th:each="err : ${#fields.errors('password')}" th:text="${err}"></div>
-        </div>
-        <div class="row">
-            <input type="password" name="confirmPassword" th:field="*{confirmPassword}" th:placeholder="#{위에_입력한_비밀번호와_동일한_비밀번호를_입력해주세요.}">
+        <th:block th:if="${!socialConfig.useKakaoLogin || !requestJoin.social}">
+            <div class="row">
+                <input type="password" name="password" th:field="*{password}" th:placeholder="#{비밀번호}">
 
-            <div class="error" th:each="err : ${#fields.errors('confirmPassword')}" th:text="${err}"></div>
-        </div>
+                <div class="error" th:each="err : ${#fields.errors('password')}" th:text="${err}"></div>
+            </div>
+            <div class="row">
+                <input type="password" name="confirmPassword" th:field="*{confirmPassword}" th:placeholder="#{위에_입력한_비밀번호와_동일한_비밀번호를_입력해주세요.}">
 
+                <div class="error" th:each="err : ${#fields.errors('confirmPassword')}" th:text="${err}"></div>
+            </div>
+        </th:block>
         <div class="row">
             <input type="text" name="nickName" th:field="*{nickName}" th:placeholder="#{닉네임을_입력하세요.}">
 
