--- a/src/main/resources/templates/front/board/default/_comment.html
+++ b/src/main/resources/templates/front/board/default/_comment.html
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
     <th:block th:fragment="comment">
-        <form id="commentForm" name="frmSave" method="POST" th:action="@{/board/comment}" autocomplete="off" target="ifrmProcess">
-            <div class="commenter">
+        <form th:replace="~{front/board/default/_comment_form::form}"></form>
 
-            </div>
-        </form>
     </th:block>
 </html>
