--- a/src/main/resources/templates/front/board/default/_comment.html
+++ b/src/main/resources/templates/front/board/default/_comment.html
@@ -3,5 +3,6 @@
     <th:block th:fragment="comment">
         <form th:replace="~{front/board/default/_comment_form::form}"></form>
 
+        <th:block th:replace="~{front/board/default/_comment_items::items}"></th:block>
     </th:block>
 </html>
