--- a/src/main/resources/templates/front/board/default/_comment_form.html
+++ b/src/main/resources/templates/front/board/default/_comment_form.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-    <form th:fragment="form" id="commentForm" name="frmSave" method="POST" th:action="@{/board/comment}"
-          autocomplete="off" th:object="${requestComment}" th:target="*{target}">
-        <input type="hidden" name="mode" th:field="*{mode}">
+    <form th:fragment="form" id="commentForm" name="frmSave" method="POST" th:action="@{/board/comment}" autocomplete="off" th:object="${requestComment}" th:target="*{target}">
         <div class="error global" th:each="err : ${#fields.globalErrors()}" th:text="${err}"></div>
+        <input type="hidden" name="mode" th:field="*{mode}">
+        <input th:if="${mode == 'edit'}" type="hidden" name="seq" th:field="*{seq}">
+        <input type="hidden" name="boardDataSeq" th:field="*{boardDataSeq}">
 
         <div class="commenter">
             <span th:text="#{작성자}"></span>
@@ -16,10 +17,11 @@
             <div class="error" th:each="err : ${#fields.errors('commenter')}" th:text="${err}"></div>
 
         </div>
-        <!-- // commenter -->
+        <!--// commenter -->
         <div class="comment-wrap">
             <textarea name="content" id="comment-content" th:field="*{content}"></textarea>
-            <button type="submit" th:text="#{작성하기}"></button>
+            <button th:if="${mode != 'edit'}" type="submit" th:text="#{작성하기}"></button>
+            <button th:if="${mode == 'edit'}" type="submit" th:text="#{수정하기}"></button>
         </div>
         <div class="error" th:each="err : ${#fields.errors('content')}" th:text="${err}"></div>
     </form>
